@@ -1,3 +1,7 @@
+#0,1,0,20210806
+	Save/Load button added for backburner setting.
+	Backburner can send job for custom version (By default current Blender Version).
+
 #0,1,0,20210726
 	In Backburner submiter 'frame per task' added for 'Specific frames' mode too.
 
